--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-beautifulsoup4==4.9.3
+requests==2.22.0
 fake-useragent==0.1.11
-lxml==4.6.3
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-soupsieve==2.2.1
 termcolor==1.1.0
